--- a/src/app/feature-modules/salas/lista/lista.component.html
+++ b/src/app/feature-modules/salas/lista/lista.component.html
@@ -1,1 +1,9 @@
-<p>lista works!</p>
+<section>
+    <div class="container">
+        <div class="row">
+            <div *ngFor="let sala of salas" class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <app-sala [sala]="sala"></app-sala>
+            </div>
+        </div>
+    </div>
+</section>
