--- a/src/app/shared/components/template/header/header.component.html
+++ b/src/app/shared/components/template/header/header.component.html
@@ -1,24 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" routerLink="/conciliador">Firme Acordos</a>
+        <a class="navbar-brand navbarLink" routerLink="/conciliador">Firme Acordos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link">Pricing</a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link navbarLink" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navbarLink">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navbarLink">Pricing</a>
+                </li>
             </ul>
-            <span class="navbar-text">
-            Navbar text with an inline element
-            </span>
+            <a class="navbarLink" routerLink="/conciliador/autenticacao/login">Login</a>
         </div>
     </div>
 </nav>
