request interceptor, token service, wip token-http service. DebouncedTime button click directive, class to interface changes at shared, login and register forms update

--- a/src/app/feature-modules/autenticacao/cadastro/cadastro.component.html
+++ b/src/app/feature-modules/autenticacao/cadastro/cadastro.component.html
@@ -1,1 +1,1 @@
-<app-cadastro-form [cadastroForm]="cadastroForm"></app-cadastro-form>
+<app-cadastro-form [cadastroForm]="cadastroForm" emitForm="formSubmited()"></app-cadastro-form>
