--- a/src/app/feature-modules/autenticacao/login/login.component.html
+++ b/src/app/feature-modules/autenticacao/login/login.component.html
@@ -1,3 +1,3 @@
 <div class="loginWrapper">
-    <app-login-form [loginForm]="loginForm"></app-login-form>
+    <app-login-form [loginForm]="loginForm" (loginEmit)="loginSubmit()"></app-login-form>
 </div>
