Implementacao de mensagens, autenticacao, autorizacao, interceptors, login, cadastro

--- a/src/app/feature-modules/feature-modules.component.html
+++ b/src/app/feature-modules/feature-modules.component.html
@@ -1,3 +1,6 @@
 <app-page>
     <router-outlet></router-outlet>
 </app-page>
+<app-message *ngIf="messageObj?.isToShow" [messageType]="messageObj?.messageType" [@messageAnimation]>
+    <strong>{{messageObj?.strongText}}</strong>{{messageObj?.messageText}}
+</app-message>
