--- a/src/app/shared/components/template/page/page.component.html
+++ b/src/app/shared/components/template/page/page.component.html
@@ -1,5 +1,5 @@
-<app-header></app-header>
-<section class="container-fluid sectionContent">
+<app-header [userIsLogged]="userIsLogged" [userName]="userName"></app-header>
+<section class="container sectionContent">
     <ng-content></ng-content>
 </section>
 <app-footer></app-footer>
