--- a/src/app/chat/chat-mensagens/chat-mensagens.component.html
+++ b/src/app/chat/chat-mensagens/chat-mensagens.component.html
@@ -1,1 +1,3 @@
-<p>chat-mensagens works!</p>
+<div class="mensagens">
+    <app-mensagem *ngFor="let mensagem of mensagens" [mensagem]="mensagem" class="position-relative mensagemWrapper"></app-mensagem>
+</div>
