--- a/src/app/chat/chat-navbar/chat-navbar.component.html
+++ b/src/app/chat/chat-navbar/chat-navbar.component.html
@@ -1,1 +1,12 @@
-<p>chat-navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            <li class='nav-item'>
+                <a class="nav-link navbarLink" routerLink="/home">Painel</a>
+            </li>
+            <li class='nav-item'>
+                <a class="nav-link navbarLink" routerLink="/conciliador/salas/lista">Salas</a>
+            </li>
+        </ul>         
+    </div>
+</nav>
