--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,17 @@
-<p>chat works!</p>
+<div class="chatContainer">
+    <app-chat-navbar class="navbarChatComponent"></app-chat-navbar>
+    <div class="row contentContainer">
+        <div class="my-2 col-12 col-sm-9">
+            <app-chat-mensagens [mensagens]="sala?.messages"></app-chat-mensagens>
+        </div>
+        <div class="my-2 col-sm-3 row p-0">
+            <div class="pb-1 col-12 h-50">
+                <app-chat-integrantes [integrantes]="sala?.integrantes"></app-chat-integrantes>
+            </div>
+            <div class="pt-1 col-12 h-50">
+                <app-chat-resumo-acordos></app-chat-resumo-acordos>
+            </div>
+        </div>
+    </div>
+    <app-chat-chat-box class="chatBox"></app-chat-chat-box>
+</div>
