--- a/src/app/feature-modules/salas/criar/criar.component.html
+++ b/src/app/feature-modules/salas/criar/criar.component.html
@@ -1,1 +1,1 @@
-<p>criar works!</p>
+<fa-sala-criacao-form [salaCriacaoForm]="salaCriacaoForm" (emitFormSubmit)="formSubmit()" [allUsers]="allUsers" [drowpdown]="drowpdown"></fa-sala-criacao-form>
