--- a/src/app/feature-modules/salas/lista/lista.component.html
+++ b/src/app/feature-modules/salas/lista/lista.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="container">
         <div class="row">
-            <div *ngFor="let sala of salas" class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div *ngFor="let sala of _salasStoreService.salas$ | async" class="col-12 col-sm-6 col-md-4">
                 <app-sala [sala]="sala"></app-sala>
             </div>
         </div>
