--- a/src/app/feature-modules/salas/lista/sala/sala.component.html
+++ b/src/app/feature-modules/salas/lista/sala/sala.component.html
@@ -2,12 +2,12 @@
     <div class="card-body">
         <h5 class="card-title">Sala {{sala?.id}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{sala?.descricao}}</h6>
-        <p class="card-text">0/{{sala?.usuarios.length}}</p>
+        <p class="card-text">0/{{sala?.integrantes.length}}</p>
     </div>
     <div class="card-footer">
         <div class="card-footer-wrapper">
-            <button class="btn btn-outline-primary">Integrantes</button>
-            <a href="#" class="btn btn-success">Entrar</a>
+            <button class="btn btn-outline-primary mx-3">Integrantes</button>
+            <a [routerLink]="['/chat', sala?.id]" class="btn btn-outline-success">Entrar</a>
         </div>
     </div>
 </div>
