--- a/src/app/chat/chat-mensagens/chat-mensagens.component.html
+++ b/src/app/chat/chat-mensagens/chat-mensagens.component.html
@@ -1,3 +1,3 @@
 <div class="mensagens">
-    <app-mensagem *ngFor="let mensagem of mensagens" [mensagem]="mensagem" class="position-relative mensagemWrapper"></app-mensagem>
+    <app-mensagem *ngFor="let mensagem of mensagens" [loggedUser]="loggedUser" [mensagem]="mensagem" class="position-relative mensagemWrapper"></app-mensagem>
 </div>
