--- a/src/app/feature-modules/conciliador/autenticacao/cadastro/cadastro.component.html
+++ b/src/app/feature-modules/conciliador/autenticacao/cadastro/cadastro.component.html
@@ -1,5 +1,10 @@
 <h1 class="my-4">Formulário de Cadastro</h1>
 <div id="" class="d-flex align-items-center justify-content-center formSection">
-    <app-cadastro-form [cadastroForm]="cadastroForm" (emitForm)="formSubmited()" [loggedUser]="loggedUser" class="width80"></app-cadastro-form>
+    <app-cadastro-form
+    [cadastroForm]="cadastroForm"
+    [loggedUser]="loggedUser"
+    (emitForm)="formSubmited()"
+    (concatRoleValue)="cadastroForm.controls.role.setValue($event)"
+    class="width80"></app-cadastro-form>
 </div>
 
