Re-implementacao dos guardas, template de listagem de slalas e nova identidade visual nos titulos das paginas, criacao de salas funcionando, criacao de usuarios e suas logicas

--- a/src/app/feature-modules/conciliador/autenticacao/cadastro/cadastro-form/cadastro-form.component.html
+++ b/src/app/feature-modules/conciliador/autenticacao/cadastro/cadastro-form/cadastro-form.component.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-4 d-flex align-items-center">
+        <div class="col-12 col-md-4 d-flex align-items-center" *ngIf="isUserAdmin">
             <div>
                 <label for="divPermissoes">Permissões</label>
                 <div id="divPermissoes py-2">
