--- a/src/app/feature-modules/conciliador/autenticacao/cadastro/cadastro.component.html
+++ b/src/app/feature-modules/conciliador/autenticacao/cadastro/cadastro.component.html
@@ -1,4 +1,4 @@
-<h1 class="my-4">Formulário de Cadastro</h1>
+<h1 class="h1 titleBorder px-3 my-4">Cadastrar Usuário</h1>
 <div id="" class="d-flex align-items-center justify-content-center formSection">
     <app-cadastro-form
     [cadastroForm]="cadastroForm"
