--- a/src/app/feature-modules/conciliador/salas/criar/criar.component.html
+++ b/src/app/feature-modules/conciliador/salas/criar/criar.component.html
@@ -1,4 +1,4 @@
-<h1 class="my-4">Criação de Sala</h1>
+<h1 class="h1 titleBorder px-3 my-4">Criação de Salas</h1>
 <div class="tamanho90vh d-flex justify-content-center">
     <fa-sala-criacao-form [salaCriacaoForm]="salaCriacaoForm" (emitFormSubmit)="formSubmit()" [allUsers]="allUsers" [drowpdown]="drowpdown" class="teste"></fa-sala-criacao-form>
 </div>
