--- a/src/app/feature-modules/conciliador/salas/criar/sala-criacao-form/sala-criacao-form.component.html
+++ b/src/app/feature-modules/conciliador/salas/criar/sala-criacao-form/sala-criacao-form.component.html
@@ -19,7 +19,7 @@
         [settings]="dropdownSettings"
         (onSelect)="onItemSelect()"
         (onDeSelect)="onDeSelect()"
-        formControlName="users"
+        formControlName="userIdList"
         >
         </ng-multiselect-dropdown>
         <div *ngIf="selectedItems.length > 0">
