--- a/src/app/feature-modules/conciliador/salas/lista/lista.component.scss
+++ b/src/app/feature-modules/conciliador/salas/lista/lista.component.scss
@@ -1,3 +1,7 @@
 .boxShadowContainer{
     box-shadow: 0 0 5px rgba($color: #000000, $alpha: 0.9)
 }
+
+.titleBorder {
+    border-left: 1rem solid #3f51b5;
+}
