--- a/src/app/shared/components/sala/sala.component.scss
+++ b/src/app/shared/components/sala/sala.component.scss
@@ -4,6 +4,11 @@
     border: none;
 }
 
+.firstCard{
+    background-color: #3f51b5;
+    color: white;
+}
+
 .card-footer-wrapper{
     width: 100%;
     height: 100%;
@@ -14,4 +19,11 @@
 
 .shadowForButtons{
     box-shadow: 2px 2px 4px rgba($color: #000000, $alpha: 0.6);
+}
+
+.onlineBall {
+    width: 1.1rem;
+    height: 1.1rem;
+    border-radius: 100%;
+    
 }
