--- a/src/app/feature-modules/chat/chat-mensagens/chat-mensagens.component.html
+++ b/src/app/feature-modules/chat/chat-mensagens/chat-mensagens.component.html
@@ -1,3 +1,3 @@
 <div #mensagensContainer class="mensagens">
-    <app-mensagem *ngFor="let mensagem of mensagens" [loggedUser]="loggedUser" [mensagem]="mensagem" class="position-relative mensagemWrapper"></app-mensagem>
+    <app-mensagem *ngFor="let mensagem of mensagens | sortMessages" [loggedUser]="loggedUser" [mensagem]="mensagem" class="position-relative mensagemWrapper"></app-mensagem>
 </div>
