--- a/src/app/feature-modules/chat/chat-navbar/chat-navbar.component.html
+++ b/src/app/feature-modules/chat/chat-navbar/chat-navbar.component.html
@@ -4,10 +4,10 @@
             <li class='nav-item'>
                 <a class="nav-link navbarLink" routerLink="/conciliador">Painel</a>
             </li>
-            <li class='nav-item' *ngIf="loggedUser?.is_admin || loggedUser?.is_moderador">
+            <li class='nav-item' *ngIf="isUserStaff">
                 <a class="nav-link navbarLink" routerLink="/conciliador/salas/lista">Salas</a>
             </li>
-            <li class='nav-item' *ngIf="loggedUser?.is_admin || loggedUser?.is_moderador">
+            <li class='nav-item' *ngIf="isUserStaff">
                 <a class="nav-link navbarLink" faDebounceButton (debouncedClick)="emitAtivacaoSala()" debounceTime="300">Ativar Sala</a>
             </li>
         </ul>         
