--- a/src/app/feature-modules/conciliador/autenticacao/login/login-form/login-form.component.html
+++ b/src/app/feature-modules/conciliador/autenticacao/login/login-form/login-form.component.html
@@ -2,13 +2,13 @@
     <div class="form-group row">
         <label for="inputEmail3" class="col-sm-2 col-form-label">CPF</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" formControlName="cpf" id="inputEmail3" placeholder="cpf">
+            <input type="text" class="form-control" formControlName="cpf" id="inputEmail3" placeholder="Digite aqui...">
         </div>
     </div>
     <div class="form-group row">
         <label for="inputPassword3" class="col-sm-2 col-form-label">Senha</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" formControlName="senha" id="inputPassword3" placeholder="senha">
+            <input type="password" class="form-control" formControlName="senha" id="inputPassword3" placeholder="Senha aqui...">
         </div>
     </div>
     <div class="form-group row">
