--- a/src/app/feature-modules/conciliador/painel/painel.component.html
+++ b/src/app/feature-modules/conciliador/painel/painel.component.html
@@ -120,7 +120,7 @@
             </div>
         </div>
         <ng-template #painelParaAtivacao>
-                <div class="mt-5 h-100 d-flex justify-content-center">
+                <div class="mt-5 d-flex justify-content-center">
                     <div class="py-3">
                         <p>
                             Parece que você ainda não está ativo, <a href="#">reenviar seu e-mail de ativação?</a>
